---------------------------------------------------------------------------------------------------
Version: 0.69.37
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.36
Date: 2025-05-25
  Changes:
    - Rubia productivity per tech level 10% => 5%
    - I did a big rework of the event handling for Rubia. This should make it much easier to expand Rubia the future. You should not notice any differences, but if bugs start showing up, please report them. If you have a problem, revert to the previous version of the mod while I fix whatever issue you might have.
---------------------------------------------------------------------------------------------------
Version: 0.69.35
Date: 2025-05-25
  Changes:
    - Fixed weird save bug.
    - Fixed cutscene crash.
    - Fixed craptonite recycling into... holmium!?
    - Added cross-tech with Cubium.
    - Rubia assets version+ to match with the asset for the Cubium tech.
    - Discovery tree compatibility.
    - Found incompatibility with "Remove All Cargo Drop Technologies". I need to investigate further for a permanent fix. For now, I am marking this mod as an incompatiblity, as it causes crashes upon trying to leave Rubia. I'll consider removing this incompatibility when that is resolved, which requires edits from that mod's creator.
---------------------------------------------------------------------------------------------------
Version: 0.69.34
Date: 2025-05-24
  Changes:
    - Fixed a technology bug from the last patch. Sorry!
---------------------------------------------------------------------------------------------------
Version: 0.69.33
Date: 2025-05-24
  Balancing:
    - Eff4 mods nerfed from -1% speed to -2% speed.
    - Trashsteroid laser resistance 60%=>85%.
    - Lyrical music more rare.
  Bugfixes:
    - My mod no longer crashes with Tapatrion. Tapatrion now crashes all by itself.